read file by chunks in background, optimized db structure, some other fixes

--- a/.default.env
+++ b/.default.env
@@ -1,2 +1,3 @@
 DB_PASSWORD=SomePassword
+POSTGRES_PASSWORD=SomePassword
 DATABASE_URL=postgres://postgres:${DB_PASSWORD}@db:5432/postgres?sslmode=disable
